syntax = "proto3";

package pb;

import "meta.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";

message CreateAnimeMovieMetaRequest {
  int64 animeID = 1;
  AnimeMetaRequest animeMeta = 2;
}

message CreateAnimeMovieMetaResponse {
  int64 animeID = 1;
  AnimeMetaResponse animeMeta = 2;
}